fix: remove overflow content

--- a/Challange8_blogr-landing-page-main/output.css
+++ b/Challange8_blogr-landing-page-main/output.css
@@ -546,14 +546,6 @@ video {
   z-index: 1;
 }
 
-.z-\[4\] {
-  z-index: 4;
-}
-
-.z-auto {
-  z-index: auto;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -631,32 +623,16 @@ video {
   width: 83.333333%;
 }
 
-.w-screen {
-  width: 100vw;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
 .w-20 {
   width: 5rem;
 }
 
-.w-12 {
-  width: 3rem;
+.w-screen {
+  width: 100vw;
 }
 
-.w-14 {
-  width: 3.5rem;
-}
-
-.w-16 {
-  width: 4rem;
+.w-full {
+  width: 100%;
 }
 
 .-translate-x-1\/2 {
@@ -705,24 +681,14 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.bg-black {
+.bg-\[\#ff525d\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(255 82 93 / var(--tw-bg-opacity));
 }
 
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#ff8f70\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 143 112 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#ff525d\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 82 93 / var(--tw-bg-opacity));
 }
 
 .px-4 {
@@ -773,6 +739,11 @@ video {
   font-weight: 700;
 }
 
+.text-\[\#ff525d\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 82 93 / var(--tw-text-opacity));
+}
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -783,37 +754,8 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\#ff525d\] {
-  --tw-text-opacity: 1;
-  color: rgb(255 82 93 / var(--tw-text-opacity));
-}
-
-.hover\:bg-\[\#4b5862\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 88 98 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-black:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#c8c8cb\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(200 200 203 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#c8c8cb9b\]:hover {
-  background-color: #c8c8cb9b;
-}
-
 .hover\:bg-\[\#c8c8cb50\]:hover {
   background-color: #c8c8cb50;
-}
-
-.hover\:bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#ff525d\]:hover {
@@ -821,18 +763,23 @@ video {
   background-color: rgb(255 82 93 / var(--tw-bg-opacity));
 }
 
-.hover\:font-bold:hover {
-  font-weight: 700;
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+.hover\:font-bold:hover {
+  font-weight: 700;
 }
 
 .hover\:text-\[\#ff525d\]:hover {
   --tw-text-opacity: 1;
   color: rgb(255 82 93 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 @media (min-width: 1024px) {
@@ -937,17 +884,8 @@ video {
     overflow: hidden;
   }
 
-  .lg\:rounded-3xl {
-    border-radius: 1.5rem;
-  }
-
   .lg\:border-t-0 {
     border-top-width: 0px;
-  }
-
-  .lg\:bg-black {
-    --tw-bg-opacity: 1;
-    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   }
 
   .lg\:bg-transparent {
@@ -979,11 +917,6 @@ video {
     padding-bottom: 0px;
   }
 
-  .lg\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
   .lg\:pb-8 {
     padding-bottom: 2rem;
   }
@@ -1012,8 +945,9 @@ video {
     text-align: start;
   }
 
-  .lg\:font-bold {
-    font-weight: 700;
+  .lg\:text-\[\#ff525d\] {
+    --tw-text-opacity: 1;
+    color: rgb(255 82 93 / var(--tw-text-opacity));
   }
 
   .lg\:text-white {
@@ -1021,18 +955,8 @@ video {
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 
-  .lg\:text-\[\#ff525d\] {
-    --tw-text-opacity: 1;
-    color: rgb(255 82 93 / var(--tw-text-opacity));
-  }
-
   .lg\:hover\:bg-\[\#c8c8cb50\]:hover {
     background-color: #c8c8cb50;
-  }
-
-  .lg\:hover\:text-blue-700:hover {
-    --tw-text-opacity: 1;
-    color: rgb(29 78 216 / var(--tw-text-opacity));
   }
 
   .lg\:hover\:text-white:hover {
